--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <form action="http://localhost/login.php" method="POST">
       Contrasenya de l'administrador de LDAP:
       <input type="password" name="ctsnya"><br>
-      <input type="submit" />
+      <input type="submit" class="btn btn-dark"/>
     </form>
   </div>
 </body>
